# project_3-heart_attacks_ML

./: README.md  pyproject.toml  requirements.txt
notebooks/: EDA_rg.ipynb  Project_3_Heart_Attack.ipynb
