[project]
name = "project-3"
version = "0.1.0"
description = "DA 2025 Project 3 Heart Attack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "jupyter==1.1.1",
    "ipykernel==6.29.5",
    "scipy==1.15.2",
    "statsmodels==0.14.4",
    "scikit-learn==1.0.2"
]